<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context="activity.EventListActivity" >

    <EditText
        android:id="@+id/et_event_name"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/event_name"
        android:maxLength="20"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingTop="5dp"
        android:singleLine="true" 
        android:textColor="@color/popup_back" />

	<EditText
        android:id="@+id/et_event_description"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:maxLength="20"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingTop="5dp"
        android:hint="@string/event_description"
        android:singleLine="true" 
        android:textColor="@color/popup_back" />


    <EditText
        android:id="@+id/et_event_info"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:maxLength="20"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingTop="5dp"
        android:hint="@string/event_info"
        android:singleLine="true" 
        android:textColor="@color/popup_back" />

    <EditText        
        android:id="@+id/et_event_initial_date"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:maxLength="10"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingTop="5dp"
        android:hint="@string/event_initial_date"
        android:inputType="date"
        android:singleLine="true" 
        android:textColor="@color/popup_back" />

    <EditText
        android:id="@+id/et_event_final_date"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:maxLength="10"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingTop="5dp"
        android:hint="@string/event_final_date"
        android:inputType="date"
        android:singleLine="true" 
        android:textColor="@color/popup_back"	/>

	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_edit_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/bt_yellow"
            android:text="@string/edit_event"
            android:textColor="@color/popup_back" />
        
    </LinearLayout>

</LinearLayout>