<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444444"
    android:orientation="vertical"
    tools:context="activity.EventListActivity" >

    <View
        android:id="@+id/statusBarBackground"
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <EditText
        android:id="@+id/et_event_name"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/event_name"
        android:maxLength="20"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textColor="@color/popup_back" />

    <EditText
        android:id="@+id/et_event_description"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/event_description"
        android:maxLength="20"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textColor="@color/popup_back" />

    <EditText
        android:id="@+id/et_event_info"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/event_info"
        android:maxLength="20"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textColor="@color/popup_back" />

    <EditText
        android:id="@+id/et_event_initial_date"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/event_initial_date"
        android:inputType="date"
        android:maxLength="10"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textColor="@color/popup_back" />

    <EditText
        android:id="@+id/et_event_final_date"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/event_final_date"
        android:inputType="date"
        android:maxLength="10"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textColor="@color/popup_back" />

    <Button
        android:id="@+id/bt_select_tags"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:maxLength="10"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingTop="5dp"
        android:text="@string/event_tags"
        android:textColor="@color/status_bar" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio_spreadcost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Public Event"
            android:textColor="#FFFFFF"
            android:textSize="11dp" />

        <RadioButton
            android:id="@+id/radio_repeat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Private Event"
            android:textSize="11dp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/bt_add_aditional_informations"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/bt_color" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="-80dp"
            android:paddingTop="30dp"
            android:text="More Info" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_create_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/status_bar"
            android:text="@string/create_event"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>