<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD"
    android:orientation="vertical" >

    <View
        android:id="@+id/statusBarBackground"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/et_event_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:background="@color/status_bar_sec_level"
        android:gravity="center_vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:singleLine="true"
        android:text="@string/event_name"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/thumb" />
            
            <TextView 
                android:layout_marginTop="-30dp"
                android:layout_height="30dp"
                android:layout_width="150dp"
                android:text="Change Photo"
                android:textColor="#CCFFFFFF"
                android:textSize="14dp"
                android:textStyle="italic"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center_vertical|center_horizontal"
                android:background="#55000000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:hint="Location"
                android:maxLength="20"
                android:paddingLeft="3dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColor="@color/popup_back" />

            <EditText
                android:id="@+id/et_event_notes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@color/status_bar_third_level"
                android:ems="10"
                android:hint="@string/event_notes"
                android:maxLength="20"
                android:paddingBottom="5dp"
                android:paddingLeft="3dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColor="@color/popup_back" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/et_event_outfit"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/event_outfit"
        android:maxLength="20"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textColor="@color/popup_back" />

    <EditText
        android:id="@+id/et_event_capacity"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/event_capacity"
        android:inputType="number"
        android:maxLength="20"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textColor="@color/popup_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="190dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_weight="0.5"
            android:background="#444444"
            android:text="Cancel"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <Button
            android:id="@+id/bt_create_event_in_aditional_information"
            android:layout_width="190dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_weight="0.5"
            android:background="@color/status_bar"
            android:text="@string/create_event"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>